--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "lucide-react": "^0.403.0",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
@@ -35,7 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8.4.39",
     "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
